--- a/clickygame/src/components/Title/style.css
+++ b/clickygame/src/components/Title/style.css
@@ -3,6 +3,6 @@
   text-align: center;
   font-size: 3rem;
   text-decoration: underline;
-  color: #2A77AE;
+  /* color: #2A77AE; */
   margin-bottom: 50px;
 }
