--- a/clickygame/src/components/FriendCard/style.css
+++ b/clickygame/src/components/FriendCard/style.css
@@ -33,7 +33,7 @@
   margin-top: 18px;
 }
 
-.card > .remove {
+.card > .point {
   color: #ff1744;
   font-size: 48px;
   position: absolute;
@@ -42,6 +42,6 @@
   cursor: pointer;
 }
 
-.card > .remove:hover {
+.card > .point:hover {
   color: #d50000;
 }
