--- a/clickygame/src/components/Header/style.css
+++ b/clickygame/src/components/Header/style.css
@@ -5,4 +5,5 @@
   text-decoration: underline;
   /* color: #2A77AE; */
   margin-bottom: 50px;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
